<resources>
    <string name="app_name">Ramp-Up Analyzer</string>
    <string name="partie">Game</string>
    <string name="stats">Stats</string>
    <string name="point_am_liorer">Field to Improve</string>
    <string name="enregistrer">Save</string>
    <string name="joueur">Player</string>
    <string name="score">Score</string>
    <string name="statistiques_par_parties">Game Stats</string>
    <string name="statistiques_par_joueur">Player Stats</string>
    <string name="point">Item</string>
    <string name="DateIncorrecte">Wrong date Format</string>
    <string name="SaisirPointAmeliorer">Please pick a field to improve</string>
    <string name="SaisirScore">Please enter a score</string>
    <string name="SaisirJoueur">Please select a player name</string>
    <string name="PartieEnregistree">Game Saved</string>
    <string name="points_am_liorer">Fields to improve</string>
    <string name="joueurs">Players</string>
    <string name="ramp_up">Ramp-Up Analysis</string>
    <string name="bienvenu_message">Welcome to Ramp-Up Analyzer and track fields you need to improve in your processes and visualize results on graphs in the Stats Panel. Start by adding/modifying Fields to Improve in the Config Panel! You can view results globally (ratio of the 6 most occurent fields) or grouped by last 6 days/weeks and show the most occurent field in that day/week. You can have multiple datasets and rename them as you wish in the config panel.</string>
    <string name="ajouterNouveau">Add a New\ </string>
    <string name="clear_data">Clear Data</string>
    <string name="ok">OK</string>
    <string name="effacer">Delete</string>
    <string name="effacerStatistiques">Are you sure you want to delete all Data Entries? This cannot be undone!</string>
    <string name="cancel">Cancel</string>
    <string name="vraimentEffacer">Do You really want to Delete </string>
    <string name="effacerAssocieEgalement">\? \nYou Will Delete all associated Data as well!</string>
    <string name="impossibleEffacerDernier">Impossible to Delete the last </string>
    <string name="erreur">Error</string>
    <string name="occurencesDes">Occurance of  </string>
    <string name="jour">Day </string>
    <string name="ratioDerniersJours">Most Recurrent Field of last Days </string>
    <string name="rationPointsSemaine">Most Recurrent Field of last Weeks</string>
    <string name="voulezEffacerPartie">Do You really want to Delete the Game from </string>
    <string name="nouveau">New</string>
    <string name="global">Global</string>
    <string name="semaine">Week</string>
    <string name="liste_parties">Session List</string>
    <string name="aucuneDonnee">No Saved Date, Start by adding Data in the Game Tab</string>
    <string name="couleur_du_graphique">Graph\'s Color</string>
    <string name="cyan">Cyan</string>
    <string name="rouge">Red</string>
    <string name="bleu">Blue</string>
    <string name="vert">Green</string>
    <string name="jaune">Yellow</string>
    <string name="dataset">DataSet</string>
    <string name="rename">Rename</string>
    <string name="back">Back</string>
    <string name="renommer">Rename</string>
    <string name="complexite">Underevaluated the Complexity Level</string>
    <string name="fournisseur">Supplier not on time</string>
    <string name="imprevu">Unexpected event</string>
    <string name="dejaDansListe">The field you are trying to add is already in the list!</string>
</resources>